--- a/FatedQuest.Libraries/StandardObjects/StandardObjects.vcxproj.filters
+++ b/FatedQuest.Libraries/StandardObjects/StandardObjects.vcxproj.filters
@@ -19,6 +19,18 @@
     <Filter Include="Source Files\Position">
       <UniqueIdentifier>{8d040e81-a166-479b-81cd-75a5e7e13a33}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Object">
+      <UniqueIdentifier>{affec2bb-4d1a-4d49-a07b-5fdceb75e978}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Object">
+      <UniqueIdentifier>{3ead01b6-45ac-4476-a1ac-fec0c45de9e5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Object\GUID">
+      <UniqueIdentifier>{d8da4d94-0bbd-4fcb-b40e-00a5563f7bed}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Object\GUID">
+      <UniqueIdentifier>{6ebd5202-7c63-4cae-a7b8-04999916a727}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -36,6 +48,15 @@
     <ClInclude Include="Position\FVector2D.h">
       <Filter>Header Files\Position</Filter>
     </ClInclude>
+    <ClInclude Include="Object\GUID\GUID.h">
+      <Filter>Header Files\Object\GUID</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\GUID\GUIDHelpers.h">
+      <Filter>Header Files\Object\GUID</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\GUID\WindowsGUID.h">
+      <Filter>Header Files\Object\GUID</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="StandardObjects.cpp">
@@ -49,6 +70,15 @@
     </ClCompile>
     <ClCompile Include="Position\FVector2D.cpp">
       <Filter>Source Files\Position</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\GUID\GUID.cpp">
+      <Filter>Source Files\Object\GUID</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\GUID\GUIDHelpers.cpp">
+      <Filter>Source Files\Object\GUID</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\GUID\WindowsGUID.cpp">
+      <Filter>Source Files\Object\GUID</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
